Bug 159328 - Page number field shows up like plain text (no grayish background)
Summary: Page number field shows up like plain text (no grayish background)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+ Master
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:24.8.0 target:24.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Fields-Page-Number
  Show dependency treegraph
 
Reported: 2024-01-22 15:50 UTC by Telesto
Modified: 2024-01-31 20:01 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-01-22 15:50:34 UTC
Description:
Page number field shows up like plain text (no grayish background)

Steps to Reproduce:
1. Insert -> Field -> Page Number

Actual Results:
No background; no brackets or whatever to illustrate it being a field

Expected Results:
Some visual marker


Reproducible: Always


User Profile Reset: No

Additional Info:
Found in
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 25276df12abd9d002f7f899900434617b256f745
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

not in
Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 35f19e5cb93ce218787904e99c2bedfd40e725cc
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 RGB 2024-01-22 17:49:45 UTC
View → Field Shadings (or Ctrl-F8). Not sure when, or by whom, the decision was taken, but in the latest versions of LibreOffice, field shadings are disabled by default.
Comment 2 Telesto 2024-01-22 18:37:27 UTC
@Heiko
(In reply to RGB from comment #1)
> ..... Not sure when, or by whom, the decision
> was taken, but in the latest versions of LibreOffice, field shadings are
> disabled by default.

Intended change?
Comment 3 Heiko Tietze 2024-01-23 08:32:34 UTC
The default has not change in the last 20 years. Neither the command [1] nor the setting under Tools > Options > Application Colors [2].

[1] officecfg/registry/data/org/openoffice/Office/UI/WriterCommands.xcu (.uno:Marks)
[2] officecfg/registry/schema/org/openoffice/Office/UI.xcs (WriterFieldShadings)
Comment 4 Telesto 2024-01-23 10:49:50 UTC
(In reply to Heiko Tietze from comment #3)
> The default has not change in the last 20 years. 

It's not active for one reason or the other. I'm suspecting bug 58434 to be involved. Bibisect will tell
Comment 5 Heiko Tietze 2024-01-23 12:29:03 UTC
I doubt it was ever enabled by default. But you are right, if I start 7.6 in safe mode the field shading is on while it's off in 24.8. To avoid digging for the right ticket, isn't this something one should expect?
Comment 6 Telesto 2024-01-23 15:46:46 UTC
Bisected to:
Related tdf#58434 - Treat ZWSP and WJ as hard space

U+200B ZERO WIDTH SPACE and U+2060 WORD JOINER are not highlighted
anymore if Formatting Aids > Non-breaking spaces is off

https://gerrit.libreoffice.org/c/core/+/155019
Comment 7 Heiko Tietze 2024-01-23 16:00:49 UTC
In this case it's a regression introduced by me ;-(. I'll have a look.
Comment 8 Commit Notification 2024-01-31 14:26:18 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/788ebd183b095ffb7369c4d518acd14bad72ae82

Resolves tdf#159328 - Fix field shading regression

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-01-31 20:01:06 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/2920c56159320965e81de99b11fb1ca5dd42c8d5

Resolves tdf#159328 - Fix field shading regression

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.