Resolves tdf#159328 - Fix field shading regression

Introduced by 4d7a98b582dc70bbffc78e6622969e218f108433

Change-Id: Ibcc057e47c62d53dfa9e6410230c4b231df8551c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162799
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit 788ebd183b095ffb7369c4d518acd14bad72ae82)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162820
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>